--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -39,14 +39,13 @@ header {
     font-size: 20px;
     font-weight:600;
     color: #363636;
-    margin: 10px 0 5px 0;
+    margin: 5px 0 5px 0;
 }
 
 .input_enviar {
     border-color: #A52A2A;
     font-size: 16px;
     font-weight: bold;
-    margin-top: 20px;
     background-color: #FFFFFF;
     border-radius: 50px;
     padding: 10px;
@@ -54,7 +53,9 @@ header {
 }
 
 .input_nota {
-    padding: 10px;
+    /* padding: 10px; */
+    padding: 8px 25px 10px 25px;
+    margin-bottom: 15px;
 }
 
 .input_enviar:hover{
