--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -74,3 +74,15 @@ header {
     margin: 10px 0 10px 0;
 }
 
+.frase_resultado_erro {
+    font-size: 18px;
+    font-weight: 600;
+    background-color: #A52A2A;
+    text-align: center;
+    position: absolute;
+    left: 20%;
+    width: 63%;
+    border-radius: 50px;
+    margin: 10px 0 10px 0;
+    color: #FFFFFF;
+}
